[tool.poetry]
name = "unit-bpe"
version = "0.1.0"
description = "Plain BPE tokenizer that operates on integer sequences."
authors = ["Shuichiro Shimizu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
